Brain: Adding skeleton build tasks

--- a/build.gradle
+++ b/build.gradle
@@ -11,3 +11,21 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
     compile("org.springframework.boot:spring-boot-starter-web:1.1.4.RELEASE")
 }
+
+defaultTasks 'clean', 'unit', 'integration', 'run'
+
+task clean << {
+    println 'Default Cleaning!'
+}
+
+task unit << {
+    println 'Running Unit Tests!'
+}
+
+task integration << {
+    println 'Running Integration Tests!'
+}
+
+task run << {
+    println 'Default Running!'
+}
